Fix whatsapp share

--- a/share-menu.html
+++ b/share-menu.html
@@ -891,7 +891,10 @@
       }
 
       _whatsappTap() {
-        window.open(`whatsapp://send?text=*${encodeURIComponent(this.title)}*%0A%0A${encodeURIComponent(this.text)}%0A%0A${encodeURIComponent(this.url)}`, '_self');
+        const windowWeb = window.open(`https://web.whatsapp.com://send?text=*${encodeURIComponent(this.title)}*%0A%0A${encodeURIComponent(this.text)}%0A%0A${encodeURIComponent(this.url)}`, "whatsappWeb");
+         if (windowWeb.location.href == "about:blank") {
+           const windowApp = window.open(`whatsapp://send?text=*${encodeURIComponent(this.title)}*%0A%0A${encodeURIComponent(this.text)}%0A%0A${encodeURIComponent(this.url)}`, "whatsappApp");
+         }
       }
 
       _wordpressTap() {
